--- a/Spring/BasicSpringMVC/pom.xml
+++ b/Spring/BasicSpringMVC/pom.xml
@@ -25,6 +25,16 @@
       <artifactId>spring-webmvc</artifactId>
       <version>5.2.0.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate.javax.persistence</groupId>
+      <artifactId>hibernate-jpa-2.1-api</artifactId>
+      <version>1.0.2.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jpa</artifactId>
+      <version>2.2.0.RELEASE</version>
+    </dependency>
   </dependencies>
 
   <build>
